# cmake_minimum_required(VERSION 3.25)
# project()
add_executable(3_1_codeing_interview src/3_1_codeing_interview.cc)
add_executable(9_1_codeing_interview src/9_1_codeing_interview.cc)
add_executable(30_codeing_interview src/30_codeing_interview.cc)
add_executable(6_codeing_interview src/6_codeing_interview.cc)
add_executable(24_codeing_interview src/24_codeing_interview.cc)

add_executable(35_codeing_interview src/35_codeing_interview.cc)
add_executable(5_codeing_interview src/5_codeing_interview.cc)

add_executable(58_coding_interview src/58_coding_interview.cc)
add_executable(53_1_coding_interview src/53_1_coding_interview.cc)

add_executable(53_2_coding_interview src/53_2_coding_interview.cc)

add_executable(4_coding_interview src/4_coding_interview.cc)
add_executable(11_coding_interview src/11_coding_interview.cc)

add_executable(50_coding_interview src/50_coding_interview.cc)
add_executable(32_coding_interview src/32_coding_interview.cc)
add_executable(32_2_coding_interview src/32_2_coding_interview.cc)
add_executable(32_3_coding_interview src/32_3_coding_interview.cc)

add_executable(18_coding_interview src/18_coding_interview.cc)
add_executable(22_coding_interview src/22_coding_interview.cc)
