add_executable(LCR122 LCR122路径加密.cc)
add_executable(LCR181 LCR181字符串中的单词反转.cc)
add_executable(LCR182 LCR182动态口令.cc)
add_executable(8 8字符串转整数.cc)
add_executable(344 344反转字符串.cc)
add_executable(387 387字符串中的第一个唯一字符.cc)
# add_executable(65 65有效数字.cc)
add_executable(1768 1768交替合并字符串.cc)

add_executable(389 389找不同.cc)
add_executable(28 28找出字符串中第一个匹配项的下标.cc)


add_executable(KMP KMP字符串匹配算法.cc)

add_executable(242 242有效的字母异位词.cc)

add_executable(459 459重复的子字符串.cc)

add_executable(13 13罗马数字转整数.cc)
