add_executable(array_350 350两个数组的交集.cc)
add_executable(array_350_1 350_1.cc)
add_executable(LCR_012 LCR_012寻找数组的中心下标.cc)
add_executable(LCR_012_1 LCR_012寻找数组的中心下标_1.cc)
add_executable(LCR_139  LCR_139训练计划1.cc)
add_executable(LCR_139_1  LCR_139训练计划1快排.cc)
add_executable(1  1两数之和.cc)
add_executable(1_1  1_1.cc)
add_executable(14  14最长公共前缀.cc)
add_executable(121  121买卖股票的最佳时机.cc)
add_executable(189  189旋转数组.cc)
add_executable(27 27移除元素.cc)
add_executable(LCR180 LCR180文件组合.cc)
add_executable(LCR191 LCR191按规则计算统计结果.cc)
