add_executable(array_350 350两个数组的交集.cc)
add_executable(array_350_1 350_1.cc)
add_executable(LCR_012 LCR_012寻找数组的中心下标.cc)
add_executable(LCR_012_1 LCR_012寻找数组的中心下标_1.cc)
add_executable(LCR_139  LCR_139训练计划1.cc)
add_executable(LCR_139_1  LCR_139训练计划1快排.cc)
add_executable(1  1两数之和.cc)
add_executable(1_1  1_1.cc)
add_executable(14  14最长公共前缀.cc)
add_executable(121  121买卖股票的最佳时机.cc)
add_executable(189  189旋转数组.cc)
add_executable(27 27移除元素.cc)
add_executable(LCR180 LCR180文件组合.cc)
add_executable(LCR191 LCR191按规则计算统计结果.cc)
add_executable(LCR120 LCR120寻找文件副本.cc)
add_executable(LCR146 LCR146螺旋遍历二维数组.cc)
add_executable(136 136只出现一次的数字.cc)
add_executable(283 283移动零.cc)
add_executable(66 66加一.cc)
add_executable(1822 1822数组元素积的符号.cc)
add_executable(1502 1502判断能否形成等差数列.cc)
add_executable(896 896单调数列.cc)
add_executable(1672 1672最富有客户的资产总量.cc)
add_executable(1572 1572矩阵对角线元素的和.cc)
add_executable(54 54螺旋矩阵.cc)
add_executable(73 73矩阵置零.cc)

add_executable(1603 1603设计停车系统.cc)


add_executable(485 485最大连续1的个数.cc)
add_executable(495 495提莫攻击.cc)
add_executable(414 414第三大的数.cc)
add_executable(628 628三个数的最大乘积.cc)

add_executable(645 645错误的集合.cc)
add_executable(697 697数组的度.cc)

add_executable(448 448找到所有数组中消失的数字.cc)
add_executable(442 442数组中重复的数据.cc)
