add_executable(LCR149 LCR149彩灯装饰记录1.cc)
add_executable(LCR150 LCR150彩灯装饰记录2.cc)
add_executable(LCR151 LCR151彩灯装饰记录3.cc)
add_executable(LCR143 LCR143子结构判断.cc)

add_executable(test test.cc)


add_executable(LCR175 LCR175计算二叉树的深度.cc)

add_executable(222 222完全二叉树的节点个数.cc)
add_executable(144 二叉树的遍历/深度优先搜索DFS/144二叉树的前序遍历.cc)

add_executable(94 二叉树的遍历/深度优先搜索DFS/94二叉树的中序遍历.cc)
add_executable(145 二叉树的遍历/深度优先搜索DFS/145二叉树的后序遍历.cc)
add_executable(102 二叉树的遍历/广度优先搜索BFS/102二叉树的层序遍历.cc)

add_executable(maxDepth  二叉树的遍历/运用递归解决问题/二叉树的最大深度.cc)
add_executable(isSymmetric  二叉树的遍历/运用递归解决问题/对称二叉树.cc)

add_executable(112  二叉树的遍历/运用递归解决问题/112路径总和.cc)
add_executable(437  未完成/437路径总和3.cc)
