add_executable(learn_lb 链表.cc)
add_executable(LCR123 LCR123图书整理1.cc)
add_executable(LCR136 LCR136删除链表的节点.cc)
add_executable(LCR141 LCR141训练计划.cc)
add_executable(LCR021 LCR021删除链表倒数第N个节点.cc)
add_executable(21 21合并两个有序链表.cc)
add_executable(LCR140 LCR140训练计划2.cc)
add_executable(LCR142 LCR142训练计划4.cc)
add_executable(LCR171 LCR171训练计划5.cc)
add_executable(LCR154 LCR154复杂链表的复制.cc)
add_executable(141 141环形链表.cc)
