add_executable(bubble_sort 1冒泡排序.cc sort_tools.cc)
add_executable(choise_sort 2选择排序.cc sort_tools.cc)
add_executable(insert_sort 3插入排序.cc sort_tools.cc)
add_executable(shell_sort 4希尔排序.cc sort_tools.cc)
add_executable(merge_sort 5并归排序.cc sort_tools.cc)
add_executable(quick_sort 6快速排序.cc sort_tools.cc)


add_executable(bubble_sort_ex ./练习/冒泡.cc sort_tools.cc)
add_executable(choise_sort_ex ./练习/选择.cc sort_tools.cc)
add_executable(insert_sort_ex ./练习/插入.cc sort_tools.cc)
add_executable(quick_sort_ex ./练习/快排.cc sort_tools.cc)
